v3.9.0 (XXXX-XX-XX)
-------------------

* Upgraded bundled version of RocksDB to 6.27.

* Improved sync protocol to commit after each chunk and get rid of potentially
  dangerous NO_INDEXING optimization.

* Removed an invalid assertion that could be triggered during chaos testing in
  maintainer mode.

* Simplify the tagging of EnumerateCollectionNodes and IndexNodes with the
  "read-own-writes" flag. Previously the tagging only happened after all query
  optimizations were completed, making the tag unavailable to the optimizer.
  Now the tag is set early on, so it is accessible by the query optimizer.

* APM-187: The "Rebalance Shards" button now is displayed in a new tab, and it
  is displayed for any database in cluster mode. There is also a new flag for
  arangod, `--cluster.max-number-of-move-shards` (default = 10), which limits
  the amount of move shards operations each time the button is clicked to
  rebalance shards. When the button is clicked, the number of move shards
  operations scheduled is shown, or that no operation was scheduled if the flag
  `--cluster.max-number-of-move-shards` has a value of 0.

* Make the `--version` and `--version-json` commands usable in arangobackup when
  no positional argument (operation type) was specified. Previously,
  arangobackup insisted on specifying the operation type alongside the
  `--version` or `--version-json` commands.

* Fixed an issue in old incremental sync protocol with document keys that
  contained special characters (`%`). These keys could be send unencoded in the
  incremental sync protocol, leading to wrong key ranges being transfered
  between leader and follower, and thus causing follow-up errors and preventing
  getting in sync.

* APM-209: Histogram displaying is now switched off by default. For displaying
  it, the new flag `histogram.generate` must be set to true. Its default value
  is false for compatibility with other versions and also for complying with the