@@ -9,6 +9,10 @@ v3.9.0 (XXXX-XX-XX)
 * Removed an invalid assertion that could be triggered during chaos testing in
   maintainer mode.
 
+* Cleanup and properly fail hotbackup upload and download jobs if a dbserver
+  fails or is restarted during the transfer. This gets rid of upload and download
+  blockages in these circumstances.
+
 * Simplify the tagging of EnumerateCollectionNodes and IndexNodes with the
   "read-own-writes" flag. Previously the tagging only happened after all query
   optimizations were completed, making the tag unavailable to the optimizer.
